--- a/lib/web/templates/admin/quest/index.html.eex
+++ b/lib/web/templates/admin/quest/index.html.eex
@@ -23,33 +23,35 @@
           </div>
         </div>
         <div class="box-body">
-          <table class="table">
-            <thead>
-              <tr>
-                <th>ID</th>
-                <th>Name</th>
-                <th>Level</th>
-                <th>Giver</th>
-                <th>Experience</th>
-                <th>Actions</th>
-              </tr>
-            </thead>
-            <tbody>
-              <%= Enum.map @quests, fn (quest) -> %>
+          <div class="table-responsive">
+            <table class="table">
+              <thead>
                 <tr>
-                  <td><%= quest.id %></td>
-                  <td><%= link(quest.name, to: quest_path(@conn, :show, quest.id)) %></td>
-                  <td><%= quest.level %></td>
-                  <td><%= link(quest.giver.name, to: npc_path(@conn, :show, quest.giver.id)) %></td>
-                  <td><%= quest.experience %></td>
-                  <td>
-                    <%= link("View", to: quest_path(@conn, :show, quest.id), class: "btn btn-default btn-xs") %>
-                    <%= link("Edit", to: quest_path(@conn, :edit, quest.id), class: "btn btn-default btn-xs") %>
-                  </td>
+                  <th>ID</th>
+                  <th>Name</th>
+                  <th>Level</th>
+                  <th>Giver</th>
+                  <th>Experience</th>
+                  <th>Actions</th>
                 </tr>
-              <% end %>
-            </tbody>
-          </table>
+              </thead>
+              <tbody>
+                <%= Enum.map @quests, fn (quest) -> %>
+                  <tr>
+                    <td><%= quest.id %></td>
+                    <td><%= link(quest.name, to: quest_path(@conn, :show, quest.id)) %></td>
+                    <td><%= quest.level %></td>
+                    <td><%= link(quest.giver.name, to: npc_path(@conn, :show, quest.giver.id)) %></td>
+                    <td><%= quest.experience %></td>
+                    <td>
+                      <%= link("View", to: quest_path(@conn, :show, quest.id), class: "btn btn-default btn-xs") %>
+                      <%= link("Edit", to: quest_path(@conn, :edit, quest.id), class: "btn btn-default btn-xs") %>
+                    </td>
+                  </tr>
+                <% end %>
+              </tbody>
+            </table>
+          </div>
 
           <%= SharedView.pagination(path: quest_path(@conn, :index), pagination: @pagination, name: "quests") %>
         </div>
