--- a/lib/web/templates/admin/zone/index.html.eex
+++ b/lib/web/templates/admin/zone/index.html.eex
@@ -23,31 +23,33 @@
           </div>
         </div>
         <div class="box-body">
-          <table class="table">
-            <thead>
-              <tr>
-                <th>ID</th>
-                <th>Name</th>
-                <th>Starting Level</th>
-                <th>Ending Level</th>
-                <th>Actions</th>
-              </tr>
-            </thead>
-            <tbody>
-              <%= Enum.map @zones, fn (zone) -> %>
+          <div class="table-responsive">
+            <table class="table">
+              <thead>
                 <tr>
-                  <td><%= zone.id %></td>
-                  <td><%= link(zone.name, to: zone_path(@conn, :show, zone.id)) %></td>
-                  <td><%= zone.starting_level %></td>
-                  <td><%= zone.ending_level %></td>
-                  <td>
-                    <%= link("View", to: zone_path(@conn, :show, zone.id), class: "btn btn-default btn-xs") %>
-                    <%= link("Edit", to: zone_path(@conn, :edit, zone.id), class: "btn btn-default btn-xs") %>
-                  </td>
+                  <th>ID</th>
+                  <th>Name</th>
+                  <th>Starting Level</th>
+                  <th>Ending Level</th>
+                  <th>Actions</th>
                 </tr>
-              <% end %>
-            </tbody>
-          </table>
+              </thead>
+              <tbody>
+                <%= Enum.map @zones, fn (zone) -> %>
+                  <tr>
+                    <td><%= zone.id %></td>
+                    <td><%= link(zone.name, to: zone_path(@conn, :show, zone.id)) %></td>
+                    <td><%= zone.starting_level %></td>
+                    <td><%= zone.ending_level %></td>
+                    <td>
+                      <%= link("View", to: zone_path(@conn, :show, zone.id), class: "btn btn-default btn-xs") %>
+                      <%= link("Edit", to: zone_path(@conn, :edit, zone.id), class: "btn btn-default btn-xs") %>
+                    </td>
+                  </tr>
+                <% end %>
+              </tbody>
+            </table>
+          </div>
 
           <%= SharedView.pagination(path: zone_path(@conn, :index), pagination: @pagination, name: "zones") %>
         </div>
