--- a/lib/web/templates/admin/announcement/index.html.eex
+++ b/lib/web/templates/admin/announcement/index.html.eex
@@ -24,33 +24,35 @@
           </div>
         </div>
         <div class="box-body">
-          <table class="table">
-            <thead>
-              <tr>
-                <th>ID</th>
-                <th>Title</th>
-                <td>Is Published?</th>
-                <td>Is Sticky?</th>
-                <td>Date</th>
-                <th>Actions</th>
-              </tr>
-            </thead>
-            <tbody>
-              <%= Enum.map @announcements, fn (announcement) -> %>
+          <div class="table-responsive">
+            <table class="table">
+              <thead>
                 <tr>
-                  <td><%= announcement.id %></td>
-                  <td><%= announcement.title %></td>
-                  <td><code><%= announcement.is_published %></code></td>
-                  <td><code><%= announcement.is_sticky %></code></td>
-                  <td><%= announcement.published_at |> TimeView.time() %></td>
-                  <td>
-                    <%= link("View", to: announcement_path(@conn, :show, announcement.id), class: "btn btn-default btn-xs") %>
-                    <%= link("Edit", to: announcement_path(@conn, :edit, announcement.id), class: "btn btn-default btn-xs") %>
-                  </td>
+                  <th>ID</th>
+                  <th>Title</th>
+                  <td>Is Published?</th>
+                  <td>Is Sticky?</th>
+                  <td>Date</th>
+                  <th>Actions</th>
                 </tr>
-              <% end %>
-            </tbody>
-          </table>
+              </thead>
+              <tbody>
+                <%= Enum.map @announcements, fn (announcement) -> %>
+                  <tr>
+                    <td><%= announcement.id %></td>
+                    <td><%= announcement.title %></td>
+                    <td><code><%= announcement.is_published %></code></td>
+                    <td><code><%= announcement.is_sticky %></code></td>
+                    <td><%= announcement.published_at |> TimeView.time() %></td>
+                    <td>
+                      <%= link("View", to: announcement_path(@conn, :show, announcement.id), class: "btn btn-default btn-xs") %>
+                      <%= link("Edit", to: announcement_path(@conn, :edit, announcement.id), class: "btn btn-default btn-xs") %>
+                    </td>
+                  </tr>
+                <% end %>
+              </tbody>
+            </table>
+          </div>
         </div>
         <div class="box-footer">
           <%= SharedView.pagination(path: announcement_path(@conn, :index), pagination: @pagination, name: "announcements") %>
