--- a/lib/web/templates/admin/bug/index.html.eex
+++ b/lib/web/templates/admin/bug/index.html.eex
@@ -18,33 +18,35 @@
     <div class="col-md-9">
       <div class="box box-primary">
         <div class="box-body">
-          <table class="table">
-            <thead>
-              <tr>
-                <th>ID</th>
-                <th>Title</th>
-                <th>Reporter</th>
-                <th>Is Completed?</th>
-                <th>Actions</th>
-              </tr>
-            </thead>
-            <tbody>
-              <%= Enum.map @bugs, fn (bug) -> %>
+          <div class="table-responsive">
+            <table class="table">
+              <thead>
                 <tr>
-                  <td><%= bug.id %></td>
-                  <td><%= bug.title %></td>
-                  <td><%= link(bug.reporter.name, to: user_path(@conn, :show, bug.reporter.id)) %></td>
-                  <td><%= bug.is_completed %></td>
-                  <td>
-                    <%= link("View", to: bug_path(@conn, :show, bug.id), class: "btn btn-default btn-xs") %>
-                    <%= if !bug.is_completed do %>
-                      <%= button("Mark Complete", to: bug_complete_path(@conn, :complete, bug.id), class: "btn btn-default btn-xs") %>
-                    <% end %>
-                  </td>
+                  <th>ID</th>
+                  <th>Title</th>
+                  <th>Reporter</th>
+                  <th>Is Completed?</th>
+                  <th>Actions</th>
                 </tr>
-              <% end %>
-            </tbody>
-          </table>
+              </thead>
+              <tbody>
+                <%= Enum.map @bugs, fn (bug) -> %>
+                  <tr>
+                    <td><%= bug.id %></td>
+                    <td><%= bug.title %></td>
+                    <td><%= link(bug.reporter.name, to: user_path(@conn, :show, bug.reporter.id)) %></td>
+                    <td><%= bug.is_completed %></td>
+                    <td>
+                      <%= link("View", to: bug_path(@conn, :show, bug.id), class: "btn btn-default btn-xs") %>
+                      <%= if !bug.is_completed do %>
+                        <%= button("Mark Complete", to: bug_complete_path(@conn, :complete, bug.id), class: "btn btn-default btn-xs") %>
+                      <% end %>
+                    </td>
+                  </tr>
+                <% end %>
+              </tbody>
+            </table>
+          </div>
         </div>
         <div class="box-footer">
           <%= SharedView.pagination(path: bug_path(@conn, :index), pagination: @pagination, name: "bugs") %>
