--- a/lib/web/templates/admin/channel/index.html.eex
+++ b/lib/web/templates/admin/channel/index.html.eex
@@ -23,29 +23,31 @@
           </div>
         </div>
         <div class="box-body">
-          <table class="table">
-            <thead>
-              <tr>
-                <th>ID</th>
-                <th>Name</th>
-                <th>Color</th>
-                <th>Actions</th>
-              </tr>
-            </thead>
-            <tbody>
-              <%= Enum.map @channels, fn (channel) -> %>
+          <div class="table-responsive">
+            <table class="table">
+              <thead>
                 <tr>
-                  <td><%= channel.id %></td>
-                  <td><%= channel.name %></td>
-                  <td><code><%= channel.color %></code></td>
-                  <td>
-                    <%= link("View Log", to: channel_path(@conn, :show, channel.id), class: "btn btn-default btn-xs") %>
-                    <%= link("Edit", to: channel_path(@conn, :edit, channel.id), class: "btn btn-default btn-xs") %>
-                  </td>
+                  <th>ID</th>
+                  <th>Name</th>
+                  <th>Color</th>
+                  <th>Actions</th>
                 </tr>
-              <% end %>
-            </tbody>
-          </table>
+              </thead>
+              <tbody>
+                <%= Enum.map @channels, fn (channel) -> %>
+                  <tr>
+                    <td><%= channel.id %></td>
+                    <td><%= channel.name %></td>
+                    <td><code><%= channel.color %></code></td>
+                    <td>
+                      <%= link("View Log", to: channel_path(@conn, :show, channel.id), class: "btn btn-default btn-xs") %>
+                      <%= link("Edit", to: channel_path(@conn, :edit, channel.id), class: "btn btn-default btn-xs") %>
+                    </td>
+                  </tr>
+                <% end %>
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
     </div>
