--- a/assets/play/css/app.scss
+++ b/assets/play/css/app.scss
@@ -1,3 +1,6 @@
+$prompt-height: 150px;
+$mobile-prompt-height: 110px;
+
 /**
  * Main layout
  */
@@ -12,10 +15,11 @@ body {
   top: 0;
   left: 20%;
   width: 60%;
-  height: 88%;
+  height: calc(100% - #{$prompt-height});
   overflow-y: scroll;
 
   @media only screen and (max-device-width: 667px) {
+    height: calc(100% - #{$mobile-prompt-height});
     left: 0;
     width: 100%;
   }
@@ -28,7 +32,7 @@ body {
 
 .prompt {
   width: 100%;
-  height: 12%;
+  height: $prompt-height;
   position: absolute;
   bottom: 0;
   left: 0;
@@ -36,6 +40,10 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+  @media only screen and (max-device-width: 667px) {
+    height: $mobile-prompt-height;
+  }
 
   input[type="text"] {
     border: none;
@@ -62,7 +70,7 @@ body {
   top: 0;
   left: 0;
   width: 20%;
-  height: 88%;
+  height: calc(100% - #{$prompt-height});
 
   @media only screen and (max-device-width: 667px) {
     display: none !important;
@@ -84,7 +92,7 @@ body {
   top: 0;
   right: 0;
   width: 20%;
-  height: 88%;
+  height: calc(100% - #{$prompt-height});
 
   @media only screen and (max-device-width: 667px) {
     display: none !important;
@@ -149,7 +157,7 @@ input {
 }
 
 .stats {
-  display: none;
+  display: flex;
   width: 98%;
   margin-left: 1%;
   margin-right: 1%;
