--- a/assets/play/css/app.scss
+++ b/assets/play/css/app.scss
@@ -13,8 +13,8 @@ body {
 .panel {
   position: absolute;
   top: 0;
-  left: 20%;
-  width: 60%;
+  left: 25%;
+  width: 50%;
   height: calc(100% - #{$prompt-height});
   overflow-y: scroll;
 
@@ -69,7 +69,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  width: 20%;
+  width: 25%;
   height: calc(100% - #{$prompt-height});
 
   @media only screen and (max-device-width: 667px) {
@@ -77,10 +77,45 @@ body {
   }
 
   .container {
-    padding-left: 15px;
     display: flex;
     flex-direction: column;
     height: 100%;
+  }
+
+  .character-container {
+    padding-left: 15px;
+  }
+
+  .channels-header {
+    margin-left: 15px;
+    margin-bottom: 0;
+  }
+
+  .channels-overflow-container {
+    flex: 1;
+    width: 100%;
+    overflow: hidden;
+  }
+
+  .channels-container {
+    overflow-y: scroll;
+    padding-left: 15px;
+    padding-right: 3px;
+    box-sizing: content-box;
+    height: 100%;
+    width: 100%;
+
+    pre {
+      margin: 0;
+    }
+  }
+
+  .channels {
+    width: 100%;
+
+    span {
+      font-size: 1rem;
+    }
   }
 }
 
@@ -91,7 +126,7 @@ body {
   position: absolute;
   top: 0;
   right: 0;
-  width: 20%;
+  width: 25%;
   height: calc(100% - #{$prompt-height});
 
   @media only screen and (max-device-width: 667px) {
@@ -113,9 +148,20 @@ body {
     }
   }
 
+  .map-container {
+    width: 100%;
+    height: 400px;
+    overflow: hidden;
+    position: relative;
+  }
+
   .map {
     overflow: scroll;
-    margin-top: auto;
+    box-sizing: content-box;
+    width: 100%;
+    height: 100%;
+    padding-right: 18px;
+    padding-bottom: 18px;
 
     pre {
       white-space: pre;
