--- a/lib/web/templates/play/show.html.eex
+++ b/lib/web/templates/play/show.html.eex
@@ -1,29 +1,38 @@
 <div class="character-info">
   <div class="container">
-    <h3 class="character-name"></h3>
-    <div class="basic-info">
-      <span class="class-name"></span> - Level <span class="level"></span>
+    <div class="character-container">
+      <h3 class="character-name"></h3>
+      <div class="basic-info">
+        <span class="class-name"></span> - Level <span class="level"></span>
+      </div>
+      <div class="character-stats">
+        <dl>
+          <dt>Strength:</dt>
+          <dd class="strength"></dd>
+
+          <dt>Agility:</dt>
+          <dd class="agility"></dd>
+
+          <dt>Intelligence:</dt>
+          <dd class="intelligence"></dd>
+
+          <dt>Awareness:</dt>
+          <dd class="awareness"></dd>
+
+          <dt>Vitality:</dt>
+          <dd class="vitality"></dd>
+
+          <dt>Willpower:</dt>
+          <dd class="willpower"></dd>
+        </dl>
+      </div>
     </div>
-    <div class="character-stats">
-      <dl>
-        <dt>Strength:</dt>
-        <dd class="strength"></dd>
 
-        <dt>Agility:</dt>
-        <dd class="agility"></dd>
-
-        <dt>Intelligence:</dt>
-        <dd class="intelligence"></dd>
-
-        <dt>Awareness:</dt>
-        <dd class="awareness"></dd>
-
-        <dt>Vitality:</dt>
-        <dd class="vitality"></dd>
-
-        <dt>Willpower:</dt>
-        <dd class="willpower"></dd>
-      </dl>
+    <div class="channels-overflow-container">
+      <h3 class="channels-header">Channels</h3>
+      <div class="channels-container">
+        <pre><code id="channels" class="channels"></code></pre>
+      </div>
     </div>
   </div>
 </div>
@@ -34,11 +43,13 @@
 </div>
 <div class="room-info">
   <div class="container">
+    <div class="map-container">
+      <div class="map"></div>
+    </div>
     <h3 class="room-name"></h3>
     <div class="exits"></div>
     <h4>Characters</h4>
     <ul class="characters"></ul>
-    <div class="map"></div>
   </div>
 </div>
 <div class="prompt">
