--- a/assets/play/css/app.scss
+++ b/assets/play/css/app.scss
@@ -65,7 +65,7 @@ body {
 .character-info {
   display: none;
 
-  font-size: 1.25em;
+  font-size: 1.1rem;
   position: absolute;
   top: 0;
   left: 0;
@@ -122,7 +122,7 @@ body {
 .room-info {
   display: none;
 
-  font-size: 1.25em;
+  font-size: 1.1rem;
   position: absolute;
   top: 0;
   right: 0;
