--- a/assets/play/css/app.scss
+++ b/assets/play/css/app.scss
@@ -86,6 +86,24 @@ body {
     padding-left: 15px;
   }
 
+  .character-stats {
+    margin-top: 5px;
+
+    table {
+      border-collapse: collapse;
+      border-spacing: 0;
+      border-color: none;
+
+      th {
+        text-align: right;
+      }
+
+      td {
+        padding-left: 20px;
+      }
+    }
+  }
+
   .channels-header {
     margin-left: 15px;
     margin-bottom: 0;
@@ -150,7 +168,7 @@ body {
 
   .map-container {
     width: 100%;
-    height: 400px;
+    height: 275px;
     overflow: hidden;
     position: relative;
   }
