Change the room map to be more spokes connecting rooms
Preparations for ne/nw, se/sw

--- a/lib/web/templates/admin/color/_map_colors.html.eex
+++ b/lib/web/templates/admin/color/_map_colors.html.eex
@@ -1,3 +1,4 @@
+<span class="map-default">Default</span>
 <span class="map-blue">Blue</span>
 <span class="map-brown">Brown</span>
 <span class="map-dark-green">Dark Green</span>
