--- a/lib/web/templates/color/index.css.eex
+++ b/lib/web/templates/color/index.css.eex
@@ -164,6 +164,10 @@ a:hover {
   color: <%= Config.color_white() %>;
 }
 
+.map-default {
+  color: <%= Config.color_map_default() %>;
+}
+
 .map-blue {
   color: <%= Config.color_map_blue() %>;
 }
