--- a/lib/web/templates/admin/room/show.html.eex
+++ b/lib/web/templates/admin/room/show.html.eex
@@ -35,24 +35,10 @@
   </div>
 
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4 col-md-offset-4">
       <div class="box">
         <div class="box-body">
-          <%= render("_exit.html", conn: @conn, room: @room, direction: :up) %>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="box">
-        <div class="box-body">
-          <%= render("_exit.html", conn: @conn, room: @room, direction: :north) %>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="box">
-        <div class="box-body">
-          <%= render("_exit.html", conn: @conn, room: @room, direction: :out) %>
+          <%= render("_exit.html", conn: @conn, room: @room, direction: "north") %>
         </div>
       </div>
     </div>
@@ -61,37 +47,57 @@
     <div class="col-md-4">
       <div class="box">
         <div class="box-body">
-          <%= render("_exit.html", conn: @conn, room: @room, direction: :west) %>
+          <%= render("_exit.html", conn: @conn, room: @room, direction: "west") %>
         </div>
       </div>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-4 col-md-offset-4">
       <div class="box">
         <div class="box-body">
-          <%= render("_exit.html", conn: @conn, room: @room, direction: :in) %>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="box">
-        <div class="box-body">
-          <%= render("_exit.html", conn: @conn, room: @room, direction: :east) %>
+          <%= render("_exit.html", conn: @conn, room: @room, direction: "east") %>
         </div>
       </div>
     </div>
   </div>
   <div class="row">
+    <div class="col-md-4 col-md-offset-4">
+      <div class="box">
+        <div class="box-body">
+          <%= render("_exit.html", conn: @conn, room: @room, direction: "south") %>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
     <div class="col-md-4">
       <div class="box">
         <div class="box-body">
-          <%= render("_exit.html", conn: @conn, room: @room, direction: :down) %>
+          <%= render("_exit.html", conn: @conn, room: @room, direction: "up") %>
         </div>
       </div>
     </div>
     <div class="col-md-4">
       <div class="box">
         <div class="box-body">
-          <%= render("_exit.html", conn: @conn, room: @room, direction: :south) %>
+          <%= render("_exit.html", conn: @conn, room: @room, direction: "in") %>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="box">
+        <div class="box-body">
+          <%= render("_exit.html", conn: @conn, room: @room, direction: "out") %>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-4">
+      <div class="box">
+        <div class="box-body">
+          <%= render("_exit.html", conn: @conn, room: @room, direction: "down") %>
         </div>
       </div>
     </div>
