--- a/lib/web/templates/admin/room/show.html.eex
+++ b/lib/web/templates/admin/room/show.html.eex
@@ -35,10 +35,24 @@
   </div>
 
   <div class="row">
-    <div class="col-md-4 col-md-offset-4">
+    <div class="col-md-4">
+      <div class="box">
+        <div class="box-body">
+          <%= render("_exit.html", conn: @conn, room: @room, direction: "north west") %>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
       <div class="box">
         <div class="box-body">
           <%= render("_exit.html", conn: @conn, room: @room, direction: "north") %>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="box">
+        <div class="box-body">
+          <%= render("_exit.html", conn: @conn, room: @room, direction: "north east") %>
         </div>
       </div>
     </div>
@@ -60,10 +74,24 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-4 col-md-offset-4">
+    <div class="col-md-4">
+      <div class="box">
+        <div class="box-body">
+          <%= render("_exit.html", conn: @conn, room: @room, direction: "south west") %>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
       <div class="box">
         <div class="box-body">
           <%= render("_exit.html", conn: @conn, room: @room, direction: "south") %>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="box">
+        <div class="box-body">
+          <%= render("_exit.html", conn: @conn, room: @room, direction: "south east") %>
         </div>
       </div>
     </div>
